# msbuild_test

./: CMakeLists.txt
.github/workflows/: msbuild.yml  xlsxio_build.yml
src/: main.cpp
